--- a/day01_fancy_buttons/style.css
+++ b/day01_fancy_buttons/style.css
@@ -36,6 +36,13 @@ body {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+
+button {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: var(--sans-serif, sans-serif);
+}
+
 .button-container {
   display:flex;
   justify-content: center;
@@ -59,3 +66,4 @@ body {
   .fb-style-dark:hover {
    background: #2b54a7; 
   }
+
