--- a/day01_fancy_buttons/style.css
+++ b/day01_fancy_buttons/style.css
@@ -16,9 +16,12 @@ body {
   background: hsl(200, 100%, 98%);
   color: var(--main-color);
 }
+h2 {
+  padding-bottom: 1rem;
+}
 /* Structure */
 .container {
-  height: 100vh;
+  min-height: 100vh;
   width: 80vw;
   margin: 0 auto;
   background: hsl(200,100%, 95%);
@@ -32,7 +35,7 @@ body {
 
 /* Component Style */
 .flex-item {
-  border: 1px solid hsl(200,100%, 35%);
+  /* border: 1px solid hsl(200,100%, 35%); */
   padding-top: 1em;
   padding-bottom: 1em;
 }
@@ -45,7 +48,7 @@ button {
 
 .button-container {
   display:flex;
-  justify-content: center;
+  align-items: center;
   width: 33%;
   margin: 0 auto;
   justify-content: space-evenly;
@@ -83,4 +86,78 @@ button {
   .fb-style-light:active {
     background: #d8dade;
     border-color: #d8dade;
+  }
+
+  /* 3D Style Buttons */
+  .btn-3D-1 {
+    position: relative;
+    background: orangered;
+    border: none;
+    color: white;
+    padding: 15px 24px;
+    font-size: 1.4rem;
+    box-shadow: -6px 6px hsl(16, 100%, 30%);
+    outline: none;
+  }
+    .btn-3D-1:hover {
+      background: hsl(16, 100%, 45%);
+    }
+    .btn-3D-1:active {
+      background: hsl(16, 100%, 40%);
+      top: 3px;
+      left: -3px;
+      box-shadow: -3px 3px 0 hsl(16, 100%, 30%);
+    }
+    .btn-3D-1::before {
+      position: absolute;
+      display: block;
+      content: "";
+      height: 0;
+      width: 0;
+      border: 6px solid transparent;
+      border-right-color: hsl(16, 100%, 30%);
+      border-left-width: 0;
+      background: none;
+      top: 0;
+      left: -6px;
+    }
+    .btn-3D-1::after {
+      position: absolute;
+      display: block;
+      content: "";
+      height: 0;
+      width: 0;
+      border: 6px solid transparent;
+      border-top-color: hsl(16, 100%, 30%);
+      border-bottom-width: 0;
+      background: none;
+      bottom: -6px;
+      right: 0;
+    }
+    .btn-3D-1:active::before {
+      border: 3px solid transparent;
+      border-right: solid 3px hsl(16, 100%, 30%);
+      border-left-width: 0;
+      left: -3px;
+      top: 0;
+    }
+    .btn-3D-1:active::after {
+      border: 3px solid transparent;
+      border-top: solid 3px hsl(16, 100%, 30%);
+      border-bottom-width: 0;
+      bottom: -3px;
+      right: 0;
+    }
+  .btn-3D-2 {
+    position: relative;
+    background: #ecd300;
+    background: radial-gradient( hsl(54, 100%, 50%), hsl(54, 100%, 40%));
+    font-size: 1.4rem;
+    text-shadow: 0 -1px #c3af07;
+    color: white;
+    border: 1px solid hsl(54, 100%, 20%);
+    border-radius: 100%;
+    height: 120px;
+    width: 120px;
+    z-index: 4;
   }
