--- a/day01_fancy_buttons/style.css
+++ b/day01_fancy_buttons/style.css
@@ -160,4 +160,28 @@ button {
     height: 120px;
     width: 120px;
     z-index: 4;
+    outline: none;
+    box-shadow: inset 0 1px hsl(54, 100%, 50%),
+                0 2px hsl(54, 100%, 20%),
+                0 3px hsl(54, 100%, 18%),
+                0 4px hsl(54, 100%, 16%),
+                0 5px hsl(54, 100%, 14%),
+                0 6px hsl(54, 100%, 12%),
+                0 7px hsl(54, 100%, 10%),
+                0 8px hsl(54, 100%, 8%),
+                0 9px hsl(54, 100%, 6%);
   }
+    .btn-3D-2:hover {
+      background: radial-gradient(hsl(54,100%,45%),hsl(54,100%,35%));
+    }
+    .btn-3D-2:active {
+      background: radial-gradient(hsl(54,100%,43%),hsl(54,100%,33%));
+      top: 2px;
+      box-shadow: inset 0 1px hsl(54, 100%, 50%),
+                0 2px hsl(54, 100%, 20%),
+                0 3px hsl(54, 100%, 18%),
+                0 4px hsl(54, 100%, 16%),
+                0 5px hsl(54, 100%, 14%),
+                0 6px hsl(54, 100%, 12%),
+                0 7px hsl(54, 100%, 10%);
+    }
