--- a/day03_clipping_images/style.css
+++ b/day03_clipping_images/style.css
@@ -17,4 +17,16 @@ body {
   color: var(--main-color);
 }
 
-
+/* Structure */
+.container {
+  min-height: 100vh;
+  width: 66vw;
+  margin: 0 auto;
+  background: hsl(200,100%, 95%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 3em;
+  align-items: stretch;
+  justify-content: center;
+}
