--- a/day03_clipping_images/style.css
+++ b/day03_clipping_images/style.css
@@ -40,3 +40,7 @@ h4 {
 .clip-image-1 {
   clip-path: circle(40% at 50% 50%);
 }
+
+.clip-image-2 {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+}
