--- a/day03_clipping_images/style.css
+++ b/day03_clipping_images/style.css
@@ -33,6 +33,7 @@ h4 {
   padding-top: 3em;
   align-items: stretch;
   justify-content: center;
+  padding-bottom: 2em;
 }
 
 
@@ -46,4 +47,8 @@ h4 {
 }
 .clip-image-3 {
   clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+}
+
+.clip-image-4 {
+  clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
 }
