--- a/day04_sexy_reg_form/style.css
+++ b/day04_sexy_reg_form/style.css
@@ -17,14 +17,19 @@ body {
   color: var(--main-color);
 }
 
-h1 {
+::placeholder {
+  font-family: var(--sans-serif);
+}
+
+h1, h2,h3,h4 {
+  font-family: var(--serif);
   margin-bottom: 1em;
 }
 
 /* Structure */
 .container {
   min-height: 100vh;
-  width: 66vw;
+  width: 50vw;
   margin: 0 auto;
   background: hsl(200,100%, 95%);
   display: flex;
@@ -36,3 +41,109 @@ h1 {
   padding-bottom: 2em;
 }
 
+/* Component style */
+
+.register-wrapper {
+  background-image: linear-gradient(135deg,#0eeff0 30%, #088f90 90%);
+  position: relative;
+  z-index: 3;
+  padding: 100px;
+  color: #999;
+  min-height: 66vh;
+  text-align: left;
+  width: 90%;
+  margin: 0 auto;
+  font-size: 1rem;
+}
+
+p {
+  margin-bottom: 1em;
+}
+
+.register-wrapper form input {
+  display: inline-block;
+  width: 100%;
+  padding: 0 20px;
+  line-height: 50px;
+  background: white;
+  border: 1px solid #e6e6e6;
+  border-bottom-width: 3px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  outline: none;
+}
+.register-wrapper form input:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.register-wrapper form input[type="email"]:focus,
+.register-wrapper form input[type="email"]:active,
+.register-wrapper form input[type="password"]:focus,
+.register-wrapper form input[type="password"]:active{
+    border-color: #ccc;
+}
+
+.register-wrapper form input[type="submit"] {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  padding: 0 20px;
+  background-color: #f2395a;
+  background-size: 20px 20px;
+  background-image: linear-gradient(
+    45deg, 
+    rgba(255,255,255,0.15) 25%,
+    rgba(0,0,0,0) 25%,
+    rgba(0,0,0,0) 50%,
+    rgba(255,255,255,0.15) 50%,
+    rgba(255,255,255,0.15) 75%,
+    rgba(0,0,0,0) 75%, 
+    rgba(0,0,0,0) 100% 
+    );
+    border: 1px solid #f04126;
+    border-bottom-width: 3px;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.register-wrapper form input[type="submit"]:hover {
+  background-size: 40px 40px;
+}
+
+.register-title {
+  font-size: 1.6rem;
+  padding-bottom: 20px;
+  margin: 0 0 20px;
+  border-bottom: 1px dashed #e6e6e6;
+}
+
+.register-block {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 30px;
+  background: white;
+  box-shadow:0 0 50px   rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+
+.register-block::before,
+.register-block::after {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: white;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  transform: scale();
+}
