--- a/6 - Print Styles/sandbox.css
+++ b/6 - Print Styles/sandbox.css
@@ -4,16 +4,21 @@
 
    ====================================== */
 @media print {
+    
+    body::before {
+        display: none;
+    }
     .course-files,
     #logo,
     .final-result::before, 
     .info::before,
     .final-result::after,
     .info::after,
-    img {
+    img,.final-result h2,
+    .info h2 {
         display: none;
     }
-    /* GLOBAL TYPOGRAPHY RESET */
+    /* GLOBAL RESET */
     body {
         font-family: Georgia, serif;
         font-size: 16pt;
@@ -29,9 +34,43 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        color: #000;
+        color: #000 !important;
     }
     section:first-child::before {
         border: none;
     }
+/* SPECIFICS */
+h1,h2,h3,h4,h5,h6 {
+    color: #000;
+    font-size: 24pt;
+    line-height: 30pt;
+    margin: 0;
+}
+h1 {
+    font-size: 50pt;
+    margin: 0 0 20pt;
+    text-align: center;
+    width: 100%;
+    transform: rotate(0);
+
+}
+
+h1 small {
+    font-size: 24pt;
+    color: #000;
+    margin: 0 0 10pt;
+}
+a:link {
+    margin: 0;
+    padding: 0;
+}
+a::after {
+    content: " [" attr(href) "]";
+}
+footer a:link,
+footer a:visited {
+    color: #000;
+    background: none;
+}
+
 }
