--- a/6 - Print Styles/sandbox.css
+++ b/6 - Print Styles/sandbox.css
@@ -34,7 +34,7 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        color: #000 !important;
+        color: #000;
     }
     section:first-child::before {
         border: none;
@@ -60,9 +60,12 @@ h1 small {
     color: #000;
     margin: 0 0 10pt;
 }
+
+.info p {
+    color: #000;
+}
 a:link {
     margin: 0;
-    padding: 0;
 }
 a::after {
     content: " [" attr(href) "]";
@@ -71,6 +74,7 @@ footer a:link,
 footer a:visited {
     color: #000;
     background: none;
+    padding: 0;
 }
 
 }
