set up general image interaction behavior

--- a/7 - Image Manipulation/sandbox.css
+++ b/7 - Image Manipulation/sandbox.css
@@ -3,3 +3,9 @@
     CODE YOUR STYLES BELOW!
 
    ====================================== */
+.sandbox img {
+    transition: all 0.3s ease;
+}
+.sandbox img:hover {
+    cursor: crosshair;
+}
