--- a/10 - Pricing Table/sandbox.css
+++ b/10 - Pricing Table/sandbox.css
@@ -137,3 +137,44 @@
 }
 
 
+@media screen and (max-width: 1023px) {
+    .pricing-table {
+        margin: auto;
+    }    
+    .pricing-table > div {
+        float: none;
+        width: 100%;
+    }
+    .pricing-table > div:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .pricing-body {
+        max-width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        overflow-x: auto;
+    }
+    .pricing-body ul li {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .pricing-body ul li:not(first-child){
+        margin-left: -5px;
+    }
+    .pricing-body ul li:nth-child(2n) {
+        background-color:#e8e8e8;
+    }
+    .pricing-footer{
+        padding-top: 0;
+    }
+
+    .pricing-popular {
+        margin-top: 0;
+    }
+    .pricing-popular .pricing-header,
+    .pricing-popular .pricing-footer {
+        padding-top: 30px;
+    }
+}
